--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-app/static/css
 .sass-cache
 venv
 MyTravels.code-workspace
@@ -10,3 +9,7 @@ tests/__pycache__
 logs/
 app/static/images_src
 node_modules/
+Gruntfile.js
+package.json
+package-lock.json
+app/static/scss
